--- a/requirements.txt
+++ b/requirements.txt
@@ -1,76 +1,78 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=1_llvm
-boto3=1.14.20=pyh9f0ad1d_0
-botocore=1.17.20=pyh9f0ad1d_0
-brotlipy=0.7.0=py38h1e0a361_1000
-bzip2=1.0.8=h516909a_2
-ca-certificates=2020.6.20=hecda079_0
-certifi=2020.6.20=py38h32f6830_0
-cffi=1.14.0=py38hd463f26_0
-cftime=1.2.0=py38h8790de6_1
-cryptography=2.9.2=py38h766eaa4_0
-curl=7.71.1=he644dc0_1
-cycler=0.10.0=py_2
-docutils=0.15.2=py38_0
-ffmpeg=4.3=h167e202_0
-ffmpeg-python=0.2.0=py_0
-freetype=2.10.2=he06d7ca_0
-future=0.18.2=py38h32f6830_1
-gmp=6.2.0=he1b5a44_2
-gnutls=3.6.13=h79a8f9a_0
-hdf4=4.2.13=hf30be14_1003
-hdf5=1.10.6=nompi_h3c11f04_100
-icu=67.1=he1b5a44_0
-idna=2.10=pyh9f0ad1d_0
-jmespath=0.10.0=pyh9f0ad1d_0
-jpeg=9d=h516909a_0
-kiwisolver=1.2.0=py38hbf85e49_0
-krb5=1.17.1=hfafb76e_1
-lame=3.100=h14c3975_1001
-ld_impl_linux-64=2.34=h53a641e_5
-libblas=3.8.0=17_openblas
-libcblas=3.8.0=17_openblas
-libcurl=7.71.1=hcdd3856_1
-libedit=3.1.20191231=h46ee950_1
-libffi=3.2.1=he1b5a44_1007
-libgcc-ng=9.2.0=h24d8f2e_2
-libgfortran-ng=7.5.0=hdf63c60_6
-libiconv=1.15=h516909a_1006
-liblapack=3.8.0=17_openblas
-libnetcdf=4.7.4=nompi_h84807e1_104
-libopenblas=0.3.10=h5ec1e0e_0
-libpng=1.6.37=hed695b0_1
-libssh2=1.9.0=hab1572f_3
-libstdcxx-ng=9.2.0=hdf63c60_2
-llvm-openmp=10.0.0=hc9558a2_0
-matplotlib=3.2.2=1
-matplotlib-base=3.2.2=py38h5d868c9_1
-ncurses=6.1=hf484d3e_1002
-netcdf4=1.5.3=nompi_py38hfd55d45_105
-nettle=3.4.1=h1bed415_1002
-numpy=1.18.5=py38h8854b6b_0
-openh264=2.1.1=h8b12597_0
-openssl=1.1.1g=h516909a_0
-pip=20.1.1=py_1
-pycparser=2.20=pyh9f0ad1d_2
-pyopenssl=19.1.0=py_1
-pyparsing=2.4.7=pyh9f0ad1d_0
-pysocks=1.7.1=py38h32f6830_1
-python=3.8.3=cpython_he5300dc_0
-python-dateutil=2.8.1=py_0
-python_abi=3.8=1_cp38
-readline=8.0=h46ee950_1
-s3transfer=0.3.3=py38h32f6830_1
-setuptools=49.1.0=py38h32f6830_0
-six=1.15.0=pyh9f0ad1d_0
-sqlite=3.32.3=hcee41ef_1
-tk=8.6.10=hed695b0_0
-tornado=6.0.4=py38h1e0a361_1
-urllib3=1.25.9=py_0
-wheel=0.34.2=py_1
-x264=1!152.20180806=h14c3975_0
-xz=5.2.5=h516909a_1
-zlib=1.2.11=h516909a_1006
+attrs==19.3.0
+backcall 
+bleach 
+boto3 
+botocore 
+brotlipy==0.7.0
+certifi==2020.6.20
+cffi==1.14.0
+cftime
+cryptography==2.9.2
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+docutils==0.15.2
+entrypoints==0.3
+ffmpeg-python==0.2.0
+flake8==3.8.3
+future==0.18.2
+idna
+importlib-metadata
+ipykernel
+ipython
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi
+Jinja2==2.11.2
+jmespath
+jsonschema==3.2.0
+jupyter-client
+jupyter-console==6.1.0
+jupyter-core==4.6.3
+kiwisolver==1.2.0
+MarkupSafe==1.1.1
+matplotlib
+mccabe==0.6.1
+mistune==0.8.4
+nbconvert==5.6.1
+nbformat
+netCDF4
+notebook
+numpy
+packaging
+pandocfilters==1.4.2
+parso==0.7.0
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client
+prompt-toolkit
+ptyprocess==0.6.0
+pycodestyle==2.6.0
+pycparser
+pyflakes==2.2.0
+Pygments==2.6.1
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+PyQt5==5.12.3
+PyQt5-sip==4.19.18
+PyQtChart==5.12
+PyQtWebEngine==5.12.1
+pyrsistent==0.16.0
+PySocks==1.7.1
+python-dateutil==2.8.1
+pyzmq==19.0.1
+qtconsole
+QtPy==1.9.0
+s3transfer==0.3.3
+Send2Trash==1.5.0
+six
+terminado==0.8.3
+testpath==0.4.4
+tornado==6.0.4
+tqdm
+traitlets==4.3.3
+urllib3==1.25.9
+wcwidth
+webencodings==0.5.1
+widgetsnbextension
+zipp==3.1.0
