--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,100 @@
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
 attrs==19.3.0
-backcall 
-bleach 
-boto3 
-botocore 
+Automat==20.2.0
+backcall==0.2.0
+bleach==6.1.0
+boto3==1.17.53
+botocore==1.20.112
 brotlipy==0.7.0
-certifi==2020.6.20
-cffi==1.14.0
-cftime
-cryptography==2.9.2
+buildtools==1.0.6
+certifi==2024.8.30
+cffi==1.17.1
+cftime==1.6.4
+charset-normalizer==2.1.1
+constantly==15.1.0
+contourpy==1.3.0
+cryptography==43.0.1
 cycler==0.10.0
+debugpy==1.8.6
 decorator==4.4.2
 defusedxml==0.6.0
+docopt==0.6.2
 docutils==0.15.2
 entrypoints==0.3
+fastjsonschema==2.20.0
 ffmpeg-python==0.2.0
 flake8==3.8.3
+fonttools==4.54.1
+furl==2.1.3
 future==0.18.2
-idna
-importlib-metadata
-ipykernel
-ipython
+hyperlink==21.0.0
+idna==3.10
+importlib_metadata==8.4.0
+incremental==21.3.0
+ipykernel==6.4.2
+ipython==7.34.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
-jedi
+jedi==0.17.2
 Jinja2==2.11.2
-jmespath
+jmespath==0.10.0
 jsonschema==3.2.0
-jupyter-client
+jupyter-client==7.1.2
 jupyter-console==6.1.0
 jupyter-core==4.6.3
 kiwisolver==1.2.0
 MarkupSafe==1.1.1
-matplotlib
+matplotlib==3.8.0
+matplotlib-inline==0.1.7
 mccabe==0.6.1
 mistune==0.8.4
 nbconvert==5.6.1
-nbformat
-netCDF4
-notebook
-numpy
-packaging
+nbformat==5.3.0
+nest-asyncio==1.6.0
+netCDF4==1.7.1.post2
+notebook==6.1.6
+numpy==1.26.4
+orderedmultidict==1.0.1
+packaging==24.1
 pandocfilters==1.4.2
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
-prometheus-client
-prompt-toolkit
+pillow==10.4.0
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
 ptyprocess==0.6.0
 pycodestyle==2.6.0
-pycparser
+pycparser==2.22
 pyflakes==2.2.0
 Pygments==2.6.1
-pyOpenSSL==19.1.0
+pyOpenSSL==24.2.1
 pyparsing==2.4.7
-PyQt5==5.12.3
-PyQt5-sip==4.19.18
-PyQtChart==5.12
-PyQtWebEngine==5.12.1
 pyrsistent==0.16.0
 PySocks==1.7.1
 python-dateutil==2.8.1
-pyzmq==19.0.1
-qtconsole
+pyzmq==26.2.0
+qtconsole==5.2.2
 QtPy==1.9.0
+redo==2.0.4
+requests==2.28.1
 s3transfer==0.3.3
 Send2Trash==1.5.0
-six
+simplejson==3.17.6
+six==1.16.0
+SQLAlchemy==1.4.41
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
-tqdm
+tqdm==4.66.5
 traitlets==4.3.3
+Twisted==22.8.0
+typing_extensions==4.3.0
 urllib3==1.25.9
-wcwidth
+wcwidth==0.2.13
 webencodings==0.5.1
-widgetsnbextension
+widgetsnbextension==3.5.2
 zipp==3.1.0
+zope.interface==5.4.0
